--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,7 +62,8 @@ add_executable(${PROJECT_NAME}
 	Source/main.cpp
 	Source/InputManager/InputManager.cpp
 	Source/RasterRenderer/RasterRenderer.cpp
-	Source/SceneManager/SceneManager.cpp)
+	Source/SceneManager/SceneManager.cpp
+	Source/WindowManager/WindowManager.cpp )
 target_include_directories(${PROJECT_NAME} PRIVATE "${CMAKE_CURRENT_LIST_DIR}/Include")
 #-----------------------------
 
