--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@
 # Initialising stuff
 #-----------------------------
 cmake_minimum_required(VERSION 3.21)
-project(PlatinumEngine LANGUAGES CXX VERSION 0.0.1)
+project(PlatinumEngine VERSION 0.0.1)
 set(CMAKE_CXX_STANDARD 14)
 # static libraries please
 set(BUILD_SHARED_LIBS FALSE)
@@ -52,7 +52,11 @@ FetchContent_MakeAvailable(Catch2)
 #-----------------------------
 # Add more libraries from git repos here:
 #-----------------------------
-
+# glew
+set(glew-cmake_BUILD_SHARED  OFF)
+set(USE_GLU "Use GLU"  ON)
+FetchContent_Declare(glew GIT_REPOSITORY https://github.com/Perlmint/glew-cmake.git GIT_TAG glew-cmake-2.2.0)
+FetchContent_MakeAvailable(glew)
 
 #-----------------------------
 # IMPORTANT SECTION! Source code
@@ -86,7 +90,8 @@ set(PROJECT_LIBRARIES
 	"sfml-audio;sfml-graphics;sfml-system;sfml-window;"
 	"ImGui-SFML;"
 	"glm;"
-	"assimp;")
+	"assimp;"
+	"libglew_static;")
 # different targets
 target_link_libraries(${PROJECT_NAME} PRIVATE ${PROJECT_LIBRARIES})
 target_link_libraries(tests PRIVATE ${PROJECT_LIBRARIES} Catch2::Catch2WithMain)
