ShaderInput fully implemented, testing needed

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,8 +53,8 @@ FetchContent_MakeAvailable(Catch2)
 # Add more libraries from git repos here:
 #-----------------------------
 # glew
-set(glew-cmake_BUILD_SHARED  OFF)
-set(USE_GLU "Use GLU"  ON)
+set(glew-cmake_BUILD_SHARED OFF)
+set(USE_GLU "Use GLU" ON)
 FetchContent_Declare(glew GIT_REPOSITORY https://github.com/Perlmint/glew-cmake.git GIT_TAG glew-cmake-2.2.0)
 FetchContent_MakeAvailable(glew)
 
@@ -68,6 +68,15 @@ add_executable(${PROJECT_NAME}
 	Source/RasterRenderer/RasterRenderer.cpp
 	Source/SceneManager/SceneManager.cpp
 	Source/ShaderInput/ShaderInput.cpp)
+# New place to put all your source code files into:
+set(PROJECT_SOURCES_WITHOUT_MAIN
+	"Source/InputManager/InputManager.cpp;"
+	"Source/RasterRenderer/RasterRenderer.cpp;"
+	"Source/SceneManager/SceneManager.cpp;"
+	"Source/ShaderInput/ShaderInput.cpp;"
+	"Source/ShaderInput/GL_Utility.cpp;")
+# Future thing to uncomment
+# add_executable(${PROJECT_NAME} Source/main.cpp ${PROJECT_SOURCES_WITHOUT_MAIN})
 target_include_directories(${PROJECT_NAME} PRIVATE "${CMAKE_CURRENT_LIST_DIR}/Include")
 #-----------------------------
 
@@ -77,7 +86,10 @@ target_include_directories(${PROJECT_NAME} PRIVATE "${CMAKE_CURRENT_LIST_DIR}/In
 #-----------------------------
 # Add unit tests here:
 add_executable(tests
-	Test/TestTemplate.cpp)
+	${PROJECT_SOURCES_WITHOUT_MAIN}
+	Test/TestTemplate.cpp
+	Test/TestShaderInput.cpp)
+target_include_directories(tests PRIVATE "${CMAKE_CURRENT_LIST_DIR}/Include")
 #-----------------------------
 
 
