add ImGuiFileDialog library
1. add the ImGuiFileDialog lib to cmakelist.txt

2. add include directories for imgui-src and imuifiledialog-src to make the life better :)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,12 @@ FetchContent_MakeAvailable(sfml)
 # Dear ImGui
 FetchContent_Declare(imgui GIT_REPOSITORY https://github.com/ocornut/imgui.git GIT_TAG v1.86)
 FetchContent_MakeAvailable(imgui)
+include_directories(${CMAKE_BINARY_DIR}/_deps/imgui-src)
+#-----------------------------
+#ImGuiFileDialog
+FetchContent_Declare(ImGuiFileDialog GIT_REPOSITORY https://github.com/aiekick/ImGuiFileDialog.git GIT_TAG v0.6.3)
+FetchContent_MakeAvailable(ImGuiFileDialog)
+include_directories(${CMAKE_BINARY_DIR}/_deps/imguifiledialog-src)
 #-----------------------------
 # imgui-SFML
 # This was so painful to figure out! Never forget.
@@ -85,6 +91,7 @@ set(PROJECT_LIBRARIES
 	# good luck trying to find these names and trying to match them
 	# CMake is so stupid
 	"sfml-audio;sfml-graphics;sfml-system;sfml-window;"
+	"ImGuiFileDialog"
 	"ImGui-SFML;"
 	"glm;"
 	"assimp;")
