--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,6 +65,7 @@ FetchContent_MakeAvailable(glew)
 #-----------------------------
 # New place to put all your source code files into:
 set(PROJECT_SOURCES_WITHOUT_MAIN
+	"Source/Common/Load.cpp;"
 	"Source/InputManager/InputManager.cpp;"
 	"Source/RasterRenderer/RasterRenderer.cpp;"
 	"Source/OpenGL/ShaderInput.cpp;"
