Refactor code structure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,8 +65,9 @@ FetchContent_MakeAvailable(glew)
 #-----------------------------
 # New place to put all your source code files into:
 set(PROJECT_SOURCES_WITHOUT_MAIN
-	"Source/Common/Load.cpp;"
 	"Source/InputManager/InputManager.cpp;"
+	"Source/Loaders/LoaderCommon.cpp;"
+	"Source/Loaders/MeshLoader.cpp;"
 	"Source/RasterRenderer/RasterRenderer.cpp;"
 	"Source/OpenGL/ShaderInput.cpp;"
 	"Source/OpenGL/GLEnumInfo.cpp;"
