--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -73,6 +73,7 @@ set(PROJECT_SOURCES_WITHOUT_MAIN
 #  	"Source/SceneManager/SceneManager.cpp;"
   	"Source/RasterRenderer/EditorCamera.cpp;"
 	"Source/WindowManager/WindowManager.cpp;"
+	"Source/WindowManager/Filedialog.cpp;"
 	"${CMAKE_BINARY_DIR}/_deps/imguifiledialog-src/ImGuiFileDialog.cpp;"
 	"Source/OpenGL/ShaderProgram.cpp;"
 	"Source/OpenGL/Texture.cpp;"
@@ -90,7 +91,7 @@ target_include_directories(${PROJECT_NAME} PRIVATE "${CMAKE_CURRENT_LIST_DIR}/In
 add_executable(tests
 	${PROJECT_SOURCES_WITHOUT_MAIN}
 	Test/TestTemplate.cpp
-	)
+	Source/WindowManager/Filedialog.cpp Include/WindowManager/Filedialog.h)
 target_include_directories(tests PRIVATE "${CMAKE_CURRENT_LIST_DIR}/Include")
 #-----------------------------
 
