Mesh Class Made

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,8 +70,9 @@ set(PROJECT_SOURCES_WITHOUT_MAIN
 	"Source/OpenGL/ShaderInput.cpp;"
 	"Source/OpenGL/GLEnumInfo.cpp;"
 	"Source/OpenGL/GLCheck.cpp;"
-#  	"Source/SceneManager/SceneManager.cpp;"
-  	"Source/RasterRenderer/EditorCamera.cpp;"
+	"Source/OpenGL/Mesh.cpp;"
+	"Source/SceneEditor/SceneEditor.cpp;"
+  	"Source/SceneEditor/EditorCamera.cpp;"
 	"Source/WindowManager/WindowManager.cpp;"
 	"${CMAKE_BINARY_DIR}/_deps/imguifiledialog-src/ImGuiFileDialog.cpp;"
 	"Source/OpenGL/ShaderProgram.cpp;"
