Add Scene class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -94,8 +94,14 @@ set(PROJECT_SOURCES_WITHOUT_MAIN
 	
 	"Source/WindowManager/Filedialog.cpp;"
 	"Source/WindowManager/WindowManager.cpp;"
-  )
+	"Source/SceneManager/Scene.cpp;"
+
+	"Source/ComponentComposition/Component.cpp;"
+
+	"${CMAKE_BINARY_DIR}/_deps/imguifiledialog-src/ImGuiFileDialog.cpp;" )
+
 add_executable(${PROJECT_NAME} Source/main.cpp ${PROJECT_SOURCES_WITHOUT_MAIN})
+
 target_include_directories(${PROJECT_NAME} PRIVATE "${CMAKE_CURRENT_LIST_DIR}/Include")
 #-----------------------------
 
@@ -108,6 +114,8 @@ add_executable(tests
 	${PROJECT_SOURCES_WITHOUT_MAIN}
 	Test/TestTemplate.cpp
 	Source/WindowManager/Filedialog.cpp Include/WindowManager/Filedialog.h)
+
+
 target_include_directories(tests PRIVATE "${CMAKE_CURRENT_LIST_DIR}/Include")
 #-----------------------------
 
