--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,23 +65,32 @@ FetchContent_MakeAvailable(glew)
 #-----------------------------
 # New place to put all your source code files into:
 set(PROJECT_SOURCES_WITHOUT_MAIN
-	"Source/InputManager/InputManager.cpp;"
-	"Source/Maths/Vectors.cpp;"
-	"Source/RasterRenderer/Renderer.cpp;"
-	"Source/OpenGL/ShaderInput.cpp;"
-	"Source/OpenGL/GLEnumInfo.cpp;"
-	"Source/OpenGL/GLCheck.cpp;"
-	"Source/OpenGL/Mesh.cpp;"
-	"Source/SceneEditor/SceneEditor.cpp;"
-  "Source/SceneEditor/EditorCamera.cpp;"
-	"Source/WindowManager/WindowManager.cpp;"
-	"Source/WindowManager/Filedialog.cpp;"
+	# order by folder structure
 	"${CMAKE_BINARY_DIR}/_deps/imguifiledialog-src/ImGuiFileDialog.cpp;"
+	
+	"Source/InputManager/InputManager.cpp;"
+	
+	"Source/Logger/Logger.cpp;"
+	
+	"Source/Maths/Matrices.cpp;"
+	"Source/Maths/Vectors.cpp;"
+	
+	"Source/OpenGL/Framebuffer.cpp;"
+	"Source/OpenGL/GLCheck.cpp;"
+	"Source/OpenGL/GLEnumInfo.cpp;"
+	"Source/OpenGL/Mesh.cpp;"
+	"Source/OpenGL/ShaderInput.cpp;"
 	"Source/OpenGL/ShaderProgram.cpp;"
 	"Source/OpenGL/Texture.cpp;"
-	"Source/OpenGL/Framebuffer.cpp;"
-	"Source/Logger/Logger.cpp;"
-  "Source/Maths/Matrices.cpp;")
+	
+	"Source/Renderer/Renderer.cpp;"
+	
+	"Source/SceneEditor/EditorCamera.cpp;"
+	"Source/SceneEditor/SceneEditor.cpp;"
+	
+	"Source/WindowManager/Filedialog.cpp;"
+	"Source/WindowManager/WindowManager.cpp;"
+  )
 add_executable(${PROJECT_NAME} Source/main.cpp ${PROJECT_SOURCES_WITHOUT_MAIN})
 target_include_directories(${PROJECT_NAME} PRIVATE "${CMAKE_CURRENT_LIST_DIR}/Include")
 #-----------------------------
