--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,6 +82,11 @@ set(PROJECT_SOURCES_WITHOUT_MAIN
 	"Source/OpenGL/GLEnumInfo.cpp;"
 	"Source/OpenGL/Mesh.cpp;"
 	"Source/OpenGL/ShaderInput.cpp;"
+	"Source/SceneEditor/SceneEditor.cpp;"
+  	"Source/SceneEditor/EditorCamera.cpp;"
+	"Source/SceneEditor/InputManagerExtend.cpp;"
+	"Source/WindowManager/WindowManager.cpp;"
+	"${CMAKE_BINARY_DIR}/_deps/imguifiledialog-src/ImGuiFileDialog.cpp;"
 	"Source/OpenGL/ShaderProgram.cpp;"
 	"Source/OpenGL/Texture.cpp;"
 	"Source/Renderer/Renderer.cpp;"
