There is bug in Scene

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,7 +67,7 @@ FetchContent_MakeAvailable(glew)
 set(PROJECT_SOURCES_WITHOUT_MAIN
 	# order by folder structure
 	"${CMAKE_BINARY_DIR}/_deps/imguifiledialog-src/ImGuiFileDialog.cpp;"
-  
+	
 	"Source/ComponentComposition/Component.cpp;"
 	"Source/ComponentComposition/ComponentType.cpp;"
 	"Source/ComponentComposition/GameObject.cpp;"
@@ -84,6 +84,10 @@ set(PROJECT_SOURCES_WITHOUT_MAIN
 	"Source/OpenGL/GLEnumInfo.cpp;"
 	"Source/OpenGL/Mesh.cpp;"
 	"Source/OpenGL/ShaderInput.cpp;"
+	"Source/SceneEditor/SceneEditor.cpp;"
+	"Source/SceneEditor/EditorCamera.cpp;"
+	"Source/WindowManager/WindowManager.cpp;"
+	"${CMAKE_BINARY_DIR}/_deps/imguifiledialog-src/ImGuiFileDialog.cpp;"
 	"Source/OpenGL/ShaderProgram.cpp;"
 	"Source/OpenGL/Texture.cpp;"
 	
@@ -91,14 +95,12 @@ set(PROJECT_SOURCES_WITHOUT_MAIN
 	
 	"Source/SceneEditor/EditorCamera.cpp;"
 	"Source/SceneEditor/SceneEditor.cpp;"
+	"Source/SceneManager/Scene.cpp;"
 	
 	"Source/WindowManager/Filedialog.cpp;"
 	"Source/WindowManager/WindowManager.cpp;"
-	"Source/SceneManager/Scene.cpp;"
+	)
 
-	"Source/ComponentComposition/Component.cpp;"
-
-	"${CMAKE_BINARY_DIR}/_deps/imguifiledialog-src/ImGuiFileDialog.cpp;" )
 
 add_executable(${PROJECT_NAME} Source/main.cpp ${PROJECT_SOURCES_WITHOUT_MAIN})
 
