Use rendering in scene editor
Not finished yet.

Change some code in rendering temporarily for testing.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -144,12 +144,7 @@ target_include_directories(${PROJECT_NAME} PRIVATE "${CMAKE_CURRENT_LIST_DIR}/In
 set(UNIT_TESTS
 	"Test/TestTemplate.cpp;"
 	"Test/Maths/VectorsTest.cpp;"
-	"Test/Maths/MatricesTest.cpp;")
-add_executable(tests ${PROJECT_SOURCES_WITHOUT_MAIN} ${UNIT_TESTS})
-
-set(UNIT_TESTS
-	"Test/TestTemplate.cpp;"
-	"Test/Maths/VectorsTest.cpp;"
+	"Test/Maths/MatricesTest.cpp;"
 	"Test/SceneEditor/EditorCameraTest.cpp;")
 add_executable(tests ${PROJECT_SOURCES_WITHOUT_MAIN} ${UNIT_TESTS})
 
