Add Hierarchy Window class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -97,6 +97,7 @@ set(PROJECT_SOURCES_WITHOUT_MAIN
 	
 	"Source/SceneManager/Scene.cpp;"
 	"Source/SceneManager/SceneManager.cpp;"
+	"Source/SceneManager/HierarchyWindow.cpp;"
 	
 	"Source/WindowManager/WindowManager.cpp;"
 	
@@ -119,7 +120,7 @@ add_executable(tests
 	${PROJECT_SOURCES_WITHOUT_MAIN}
 	Test/TestTemplate.cpp
 	Test/TestScene.cpp
-	Source/WindowManager/Filedialog.cpp Include/WindowManager/Filedialog.h)
+	Source/WindowManager/Filedialog.cpp Include/WindowManager/Filedialog.h Source/SceneManager/HierarchyWindow.cpp)
 
 
 target_include_directories(tests PRIVATE "${CMAKE_CURRENT_LIST_DIR}/Include")
