AssetDatabase done (aka FileManager)
Made small changes:
-LoaderCommon.h moves ALLOWED_EXTENSIONS inside namespace
-Framebuffer.cpp use Logger

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,6 +71,8 @@ set(PROJECT_SOURCES_WITHOUT_MAIN
 	# order by folder structure
 
 	"${CMAKE_BINARY_DIR}/_deps/imguifiledialog-src/ImGuiFileDialog.cpp;"
+	
+	"Source/AssetDatabase/AssetDatabase.cpp;"
 
 	"Source/ComponentComposition/CameraComponent.cpp;"
 	"Source/ComponentComposition/Component.cpp;"
