Updated Cone, Capsule, Quad, Sphere, Cube

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -76,6 +76,7 @@ set(PROJECT_SOURCES_WITHOUT_MAIN
 	"Source/ComponentComposition/GameObject.cpp;"
 	"Source/ComponentComposition/RenderComponent.cpp;"
 	"Source/ComponentComposition/TransformComponent.cpp;"
+	"Source/ComponentComposition/Objects.cpp;"
 	
 	"Source/InputManager/InputManager.cpp;"
 	
