Initial Set Up Of Project Window

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -111,6 +111,8 @@ set(PROJECT_SOURCES_WITHOUT_MAIN
 	
 	"Source/Profiler/Profiler.cpp;"
 	
+	"Source/Project/ProjectWindow.cpp;"
+	
 	"Source/Renderer/Renderer.cpp;"
 	
 	"Source/SceneEditor/EditorCamera.cpp;"
