--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -178,6 +178,7 @@ set(PROJECT_SOURCES_WITHOUT_MAIN
 	"Source/Physics/Physics.cpp;"
 	
 	"Source/PlatformingGame/Player.cpp;"
+	"Source/PlatformingGame/DayNightCycle.cpp;"
 
 	"Source/ParticleEffects/ParticleEmitter.cpp"
 	"Source/ParticleEffects/ParticleRenderer.cpp;"
